--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@font-face { font-family: chango; src: url(fonts/chango-regular.ttf);}
+@font-face { font-family: chango; src: url(../fonts/chango-regular.ttf);}
 
 body {
 	background-repeat: no-repeat;
