--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,11 @@ body {
 header {
 	background-color:#2E9940;
 	margin: 80px -10px auto -10px;
-	height: 100px;
+	/*height: 100px;*/
 }
 
 #Logo {	
-	 height:60%; 
+	 height: 60%; 
 	 padding-top: 5px;
 	 padding-right: 20px;
 }
