--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 body {
 	background-repeat: no-repeat;
     background-size: 100%;
-	background-color: #1D4417;
+	background-color: #226B2C;
 }
 
 header {
